# CommeCOM

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  groups  project.config
.ci/: build.sh
admin/: index.html
demo/core/: CMakeLists.txt  main.cpp
demo/impl/: CPaper.cpp  CPaper.hpp
demo/interface/: IDrawable.hpp
docs/: Gemfile  _config.yml  contributing.md  docs.md  entrypoint.md  guid.md  index.md  smartpointer.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
examples/: CMakeLists.txt
examples/basic_usage/: CMakeLists.txt
examples/basic_usage/core/: CMakeLists.txt  main.cpp
examples/basic_usage/impl/: CMakeLists.txt  CPaper.hpp
examples/basic_usage/interface/: IDrawable.cpp  IDrawable.hpp
examples/core/: CMakeLists.txt  main.cpp
examples/iids/: Alfa.hpp  User1.cpp  User1.s  User1.ss  User2.cpp  User2.s  User2.ss  User3.cpp  main.cpp
examples/impl/: CDummy.cpp  CMakeLists.txt  CPaper.cpp  CPaper.hpp
examples/interface/: CMakeLists.txt  IDrawable.hpp
examples/purity/: Main  Main.cpp  build.sh
include/: CMakeLists.txt
include/CCom/: CComObjectBase.hpp  CInterfacePtr.hpp  Cast.hpp  Dynamic.hpp  Guid.hpp  IUnknown.hpp  Parse.hpp  Types.hpp  Utils.hpp
src/: CMakeLists.txt
src/com/: CComObject.hpp  CInterfacePtr.hpp  Cast.hpp  Dynamic.hpp  Guid.hpp  IComObject.hpp  IUnknown.hpp  Types.hpp  Utils.hpp
src/core/: CMakeLists.txt  main.cpp
src/impl/: CMakeLists.txt  CPaper.cpp  CPaper.hpp
src/interface/: CMakeLists.txt  IDrawable.cpp  IDrawable.hpp  IUnknown.cpp  IUnknown.hpp
tests/: CMakeLists.txt
tests/IID/: CMakeLists.txt  IBasic.hpp  UnitDecl.cpp  UnitDef.cpp  main.cpp
